[gd_scene load_steps=18 format=3 uid="uid://j184hts6gb1t"]

[ext_resource type="Texture2D" uid="uid://5a726lkku3qm" path="res://Assets/UI/Banners/Banner_Horizontal.png" id="1_60xhp"]
[ext_resource type="Script" uid="uid://bwym87tk3jmrm" path="res://scenes/ui/gameUI.gd" id="1_ukdt8"]
[ext_resource type="FontFile" uid="uid://csg3yg6tsxdt8" path="res://Assets/font/AlbertText-Bold.ttf" id="2_la3b0"]
[ext_resource type="Texture2D" uid="uid://chcaocfjphq3p" path="res://Assets/UI/Buttons/Button_Blue_9Slides.png" id="4_f4a4w"]
[ext_resource type="Texture2D" uid="uid://badyak7mxkweb" path="res://Assets/Factions/Knights/Dead/Dead.png" id="5_dxhck"]
[ext_resource type="Texture2D" uid="uid://bpuelajl6ns7i" path="res://Assets/Resources/Resources/G_Idle.png" id="6_naedo"]
[ext_resource type="Texture2D" uid="uid://bv66748gewfs0" path="res://Assets/Effects/fire attack.png" id="6_pq50j"]
[ext_resource type="Texture2D" uid="uid://cy8dfyyfypa7u" path="res://Assets/UI/GrayRing.png" id="7_6auhn"]
[ext_resource type="Texture2D" uid="uid://c5e7s8jx3l1g7" path="res://Assets/UI/FireRing.png" id="8_kr4q0"]
[ext_resource type="Texture2D" uid="uid://cio6q3egumxu0" path="res://Assets/UI/Title Level 1.png" id="10_4vxfa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dtacl"]
texture = ExtResource("1_60xhp")
texture_margin_left = 31.0
texture_margin_top = 14.0
texture_margin_right = 31.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(33.3551, 49.9751, 126.047, 126.025)

[sub_resource type="LabelSettings" id="LabelSettings_icdam"]
font = ExtResource("2_la3b0")
font_size = 40
font_color = Color(0.091, 0.100317, 0.65, 0.972549)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pebfw"]
texture = ExtResource("4_f4a4w")
texture_margin_left = 32.0
texture_margin_top = 32.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl5ef"]
atlas = ExtResource("5_dxhck")
region = Rect2(288, 176, 64, 64)

[sub_resource type="LabelSettings" id="LabelSettings_v6ehu"]
font = ExtResource("2_la3b0")
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2rx81"]

[sub_resource type="LabelSettings" id="LabelSettings_41emx"]
font = ExtResource("2_la3b0")
font_size = 60
font_color = Color(0.021811044, 0.00038479365, 0, 1)
outline_size = 10

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_ukdt8")

[node name="ContainerTitleLevel" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -330.99997
offset_top = -239.0
offset_right = -51.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.3629823, 1.8937365)

[node name="Level1" type="TextureRect" parent="ContainerTitleLevel"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture = ExtResource("10_4vxfa")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Timer_Panel" type="Panel" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 436.0
offset_top = 2.0
offset_right = 714.0
offset_bottom = 84.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_dtacl")

[node name="timer_label" type="Label" parent="HUD/Timer_Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
text = "00:00"
label_settings = SubResource("LabelSettings_icdam")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Death_panel" type="Panel" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 939.0
offset_right = 1152.0
offset_bottom = 82.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_pebfw")

[node name="TextureRect" type="TextureRect" parent="HUD/Death_panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 4.0
offset_right = 112.0
offset_bottom = 68.0
texture = SubResource("AtlasTexture_vl5ef")

[node name="death_label" type="Label" parent="HUD/Death_panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -121.0
offset_top = 8.0
offset_right = -40.0
offset_bottom = 62.0
grow_horizontal = 0
scale = Vector2(1.01818, 0.92)
text = "86"
label_settings = SubResource("LabelSettings_v6ehu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gold_panel" type="Panel" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 939.0
offset_top = 84.0
offset_right = 1152.0
offset_bottom = 166.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_pebfw")

[node name="TextureRect" type="TextureRect" parent="HUD/Gold_panel"]
layout_mode = 0
offset_left = -9.0
offset_top = -44.0
offset_right = 119.0
offset_bottom = 84.0
texture = ExtResource("6_naedo")

[node name="gold_label" type="Label" parent="HUD/Gold_panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -121.0
offset_top = 8.0
offset_right = -40.0
offset_bottom = 62.0
grow_horizontal = 0
scale = Vector2(1.01818, 0.92)
text = "86"
label_settings = SubResource("LabelSettings_v6ehu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fire_attack_bar" type="Panel" parent="HUD"]
modulate = Color(1, 1, 1, 0.992157)
layout_mode = 0
offset_left = 8.0
offset_top = 9.0
offset_right = 48.0
offset_bottom = 49.0
scale = Vector2(1.78328, 1.78328)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_2rx81")

[node name="TextureRect" type="TextureRect" parent="HUD/Fire_attack_bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.5069
offset_top = 13.6779
offset_right = 38.5069
offset_bottom = 37.6779
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.513397, 0.513397)
texture = ExtResource("6_pq50j")

[node name="FireBar" type="TextureProgressBar" parent="HUD/Fire_attack_bar"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
max_value = 15.0
fill_mode = 4
texture_under = ExtResource("7_6auhn")
texture_progress = ExtResource("8_kr4q0")
tint_under = Color(0.0110876, 0.0110876, 0.0110876, 1)

[node name="Fire_attack_bar2" type="Panel" parent="HUD"]
modulate = Color(1, 1, 1, 0.992157)
layout_mode = 0
offset_left = 134.0
offset_top = 8.0
offset_right = 174.0
offset_bottom = 48.0
scale = Vector2(1.78328, 1.78328)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_2rx81")

[node name="Horde_goal_panel" type="Panel" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 437.0
offset_top = 283.0
offset_right = 715.0
offset_bottom = 365.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.6255517, 1.941032)
pivot_offset = Vector2(139, 41)
theme_override_styles/panel = SubResource("StyleBoxTexture_dtacl")

[node name="HordeLabel" type="Label" parent="HUD/Horde_goal_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1465285
anchor_top = 0.035072513
anchor_right = 0.1465285
anchor_bottom = 0.035072513
offset_right = 288.0
offset_bottom = 107.0
scale = Vector2(0.280479, 0.39124328)
text = "Lá Lá Lá"
label_settings = SubResource("LabelSettings_41emx")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Super_attack_timer" type="Timer" parent="HUD"]
wait_time = 15.0

[connection signal="timeout" from="HUD/Super_attack_timer" to="." method="_on_super_attack_timer_timeout"]
